# slacknowledge

./: .dockerignore  .gitignore  README.md  cloudbuild.yaml  config.yaml  elm-package.json  slacknowledge.cabal  stack.yaml  watch.sh
app/: Api.hs  Bot.hs  ClientGenerator.hs  DevelMain.hs
elm/: AddTag.elm
es_migration/: 1.sh
images/: Dockerfile-builder  build-docker-compose.yml  docker-compose.yml
images/api/: Dockerfile
images/slacknowledge/: Dockerfile
migrations/: 0_create_temas.down.sql  0_create_temas.up.sql
scss/: app.scss
src/Data/: SimpleSearchQuery.hs  SlackMessageFormat.hs
src/Slacknowledge/: Api.hs  Bot.hs  Config.hs  Db.hs  ES.hs  Relation.hs  Team.hs  Type.hs  _bug.hs
static/: app.css
static/js/: elm.js  index.js
templates/: 500.pug  detail.pug  howto.pug  index.pug  layout.pug  slack_auth_redirect.pug
